# UltraProcessor-Checkers-Clone

./: ConfigureScreen.py  ConfigureSize.py  DrawBoard.py  InitialBoard.py  MovePiece.py  README.md  ValidMoves.py  driver.py  pyproject.toml
src/mycheckers/: __init__.py  __main__.py  initial_board.py
